<resources>
    <string name="app_name">LearnAndroidXTestCases</string>
    <string name="hello_world">Hello World</string>
    <string name="welcome_screen">Welcome Screen</string>
    <string name="toast_button">Toast Button</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_screen">Home Screen</string>
    <string name="launch_home">Launch Home</string>
    <string name="name_arun">Arun Kumar</string>
    <string name="change_text">Change Text</string>
    <string name="type_text">Type text</string>
    <string name="next_screen_change_text">Next screen change</string>
    <string name="validate_text">Validate Text</string>
    <string name="error_text">Error Text</string>
    <string name="success_text">Success Text</string>

    <string name="instructions">See MainActivity.java for valid options or type something ending
        in \"coffee\".
    </string>
    <string name="hint">How do you like your coffee?</string>
    <string name="validate">Validate</string>
    <string name="good_choice">Good choice!</string>
    <string name="bad_choice">Bad choice!</string>
    <string name="title_activity_dialer">DialerActivity</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="dial">Dial</string>
    <string name="dial_permission_not_available">Permission not available</string>
    <string name="pick_contact">Pick Contact</string>

    <string name="start_private_activity">Start Private Process Activity</string>
    <string name="click_me">Click Me!</string>
    <string name="button_clicked">Button clicked!</string>
    <string name="type_something">type something…</string>
    <string name="waiting_msg">Waiting for message…</string>
    <string name="list_selection">Selected: %1$s</string>
    <string name="start_camera">Start Camera</string>

    <string-array name="list_items">
        <item>Espresso</item>
        <item>Doppio</item>
        <item>Macchiato</item>
        <item>Cappuccino</item>
        <item>Americano</item>
        <item>Mocha</item>
        <item>Latte</item>
    </string-array>

    <string name="pick_water">Pick body of water</string>
    <string-array name="bodies_of_water">
        <item>Pacific Ocean</item>
        <item>Atlantic Ocean</item>
        <item>Arabic Ocean</item>
        <item>Arctic Ocean</item>
        <item>Indian Ocean</item>
        <item>Southern Ocean</item>
        <item>Mediterranean Sea</item>
        <item>Caribbean Sea</item>
        <item>South China Sea</item>
        <item>Bering Sea</item>
        <item>Gulf of Mexico</item>
        <item>Okhotsk Sea</item>
        <item>East China Sea</item>
        <item>Hudson Bay</item>
        <item>Japan Sea</item>
        <item>Andaman Sea</item>
        <item>North Sea</item>
        <item>Red Sea</item>
        <item>Baltic Sea</item>
    </string-array>

    <string name="provide_camera_permission">Please provide camera permission</string>
    <string name="type_text_for_ocean_name">Type text for ocean name</string>>
</resources>
