<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditTextBaseActivity">

    <EditText
        android:id="@+id/etTypeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvChangedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTypeText" />

    <Button
        android:id="@+id/btnChangeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangedText" />

    <Button
        android:id="@+id/btnNextScreenChangeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_screen_change_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeText" />
</androidx.constraintlayout.widget.ConstraintLayout>