<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SuggestedActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSuggestedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_water"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:id="@+id/tvAutoCompleteOcean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_text_for_ocean_name"
        android:completionThreshold="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSuggestedTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>